text spacing fix

--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -33,7 +33,7 @@
      
     position: absolute;
     top: 12%;
-    left: 27%;
+    left: 24%;
     font-family: sans-serif;
     z-index: 1;
     font-size: 15px;
